fix scrollbar height. tempfix.. hardcoded calc body height 100%-73px.. :(

--- a/tp2/LOG4420_TP2/assets/css/style.css
+++ b/tp2/LOG4420_TP2/assets/css/style.css
@@ -1,6 +1,6 @@
 /* General style */
 html, body {
-  height: 100%;
+  height: calc(100% - 73px);
   margin: 0;
 }
 * {
